tests/compile_fail/default/extra_params_for_default_enum.rs
#[derive(derive_more::Default)]
enum Foo { #[default(nope)] Bar, Baz}

fn main() {}